# Fisher-Information-Bars

./: README.md  __init__.py  adapters.py  adaptive.py  aggregators.py  app.py  base.py  baseline.py  batch.py  config.py  events.py  fib_builder.py  garch.py  gaussian.py  hawkes.py  math.py  outputs.py  pyproject.toml  requirements.txt  scalarizers.py  streaming.py  test_adapters.py  test_baseline_bars.py  test_edge_cases.py  test_models.py  test_scalarizers.py  test_thresholds.py  timeout.py
mnt/user-data/outputs/fibars/models/: __init__.py
